2.5.5 -> 2.90
	- permit rpm to be built in a sub-directory (--srcdir=DIR).
	- configure using automake.
	- arch/os (and platform) should be case insensitive everywhere forever.
	- attempt to deal rationally with os as "Linux" or "linux".
	- add generalized expression handler (Tom Dyas<tdyas@remus.rutgers.edu>)
	- use /usr/lib/rpm/mkinstalldirs if mkdir -p fails.
	- more portable dirent handling (Hermann Lauer).
	- add Slovak translation (Stanislav Meduna <stano@trillian.eunet.sk>)
	- gettextify rpmMessage/rpmError/fprintf messages.
	- update po files; add cz to catalogs.
	- cpio_gzip: dup the fd before doing gzdopen (Thanks Erik!)
	- add --noLang to skip non-default languages.
	- writeRPM can now copy cpio archive from fd.
	- preliminary macro environment as side effect of rpmrc parse.
	- macro handling in rpmlib -- rework include: tag with macro expansion.
	- first attempt at librpmbuild API.
        - fixed lib/rpmrc.c to accept include: tags (AdV)
        - fixed the CHANGES file to reflect that this is 2.9, not 3.0 (AdV)
	- aggregate system includes into system.h.
	- rearrange functions to minimize exported routines in librpmbuild API.
	- generalize cpio I/O to eliminate pipe to exec'd gzip on install.
	- add {init,add,expand}Macro args everywhere (new macro.c compatibility)
	- add new fully recursive macro.c

2.5.4 -> 2.5.5:
	- permit rpm to be built in a sub-directory (--srcdir=DIR).
	- return CPIO_BAD_HEADER instead of exiting. (Scott M. Stone)
	- untranslate "(none)" for auto relocating script wrappers.
	- non-linux arch/os identification (Eugene Kanter).
	- portable mode_t/pid_t typedefs.
	- fix check for trailing / in Prefix:
	- remove 2 character language name assumption.
        - add /usr/lib/rpm/find-lang.sh (W. L. Estes <wlestes@uncg.edu>)
	- miscellaneous portability cruft (Eugene Kanter).
	- Makefile: don't use ln -sf.
	- getOutputFrom(): fix race between last read on pipe and child death
	  (exacerbated in 2.5.4).